Add build app step

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -15,4 +15,9 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
       - run: npm ci
-      - run: npm test
+
+      - name: Test App
+        run: npm test
+
+      - name: Build App
+        run: npm run build
