--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -7,7 +7,18 @@ on:
     branches: [main]
 
 jobs:
-  build-and-test:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+      - run: npm ci
+
+      - name: Build App
+        run: npm run build
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,6 +29,3 @@ jobs:
 
       - name: Test App
         run: npm test
-
-      - name: Build App
-        run: npm run build
